tests/pass/test-func9.mc
void foo(int a)
{
  printf("%d\n", a + 3);
  return;
}

int main()
{
  foo(40);
  return 0;
}
