tests/fail/fail-func1.mc
void foo() {}

void bar() {}

void baz() {}

void bar() {} /* Error: duplicate function bar */

int main()
{
  return 0;
}
